test/resources/typer/failing/ArithError5.scala
object ArithError1 {
  0 ++ 0
}
